// Copyright 2024 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.analysis.internal.admin;

option go_package = "go.chromium.org/luci/analysis/internal/admin/proto;adminpb";

import "google/protobuf/timestamp.proto";

// Provides methods used to manage LUCI Analysis. Not for general use.
//
// Use of LUCI is subject to the Google [Terms of Service](https://policies.google.com/terms)
// and [Privacy Policy](https://policies.google.com/privacy).
service Admin {
  // Initiates backfill of test results in the test_results BigQuery table.
  rpc BackfillTestResults(BackfillTestResultsRequest) returns (BackfillTestResultsResponse) {};
}

// A request to backfill the test_results BigQuery table.
message BackfillTestResultsRequest {
  // The first day to backfill (inclusive).
  google.protobuf.Timestamp start_day = 1;

  // The last day to backfill (exclusive).
  google.protobuf.Timestamp end_day = 2;
}

// A response for BackfillTestResults RPC.
message BackfillTestResultsResponse {
  // The number of days for which backfill was scheduled.
  int32 days_scheduled = 1;
}
